1.20.1
------


1.20.0
------
(RB=319445)
Forbid ID header being directly accessed.

1.19.2
------
(RB=330658)
Add API to get multiple hosts from all partitions

(RB=327432)
remove checkPathValue from idl/snapshot backwards compatibility checks.
Paths are now expected to be identical.

(RB=324987)
Generated included unnamed union in the defining class.

(RB=326034)
Update PathKeys.

(RB=330531)
Fix bugs in ArgumentBuilder.

(RB=331140)
Fix bug in ActionRequestUriBuilder.

1.19.1
------
(RB=317297)
return 400 status on input coercion failure

(RB=325317)
remove autoboxing from ConsistentHashRing.compareTo

1.19.0
------
(RB=323266)
expose partitionInfoProvider to Facilities (this can break classes that implement Facilities)

(RB=322336)
Update snapshot generator to expand included schemas in the models list instead of inside the include field.

(RB=322858)
fix d2TransportClientProperties schema to reflect what's actually being stored

(RB=311710)
Distinguish BatchGet with empty batch keys and GetAll by passing empty "ids=" query parameter from client and handle in server.

1.18.3
------
(RB=322445)
add NPE check for transport client compression

1.18.2
------
(RB=313441)
Use Gradle 1.12.

(RB=312937)
Fix bug in how example requests are generated for batch update and batch partial update.

(RB=313946)
Introduced new interface called RestLiResponseData to expose response data to filters.

1.18.1
------
(RB=315193)
Fix typo in protocol version header.

1.18.0
------
(RB=316654)
Introducing a check inside BatchGetRequestBuilder.build() to fail when the key is CompoundKey or ComplexResourceKey.

1.17.3
------
(RB=315698)
Fix issue with inconsistent space encoding/decoding in uri paths.

(RB=313443)
Add cache to RecordTemplate field getter/setter whose type needs to be coerced (custom type).
Note that RecordTemplate classes need to re-generated from .pdsc files to activate this feature.

(RB=318144)
Add wire attrs as a param.

1.17.2
------
(RB=313174)